[package]
name = "stock-tui"
version = "0.1.0"
edition = "2021"
description = "A terminal-based stock portfolio tracker with real-time prices from Yahoo Finance"
license = "MIT"
repository = "https://github.com/unayung/stock-tui"
keywords = ["stock", "portfolio", "tui", "terminal", "finance"]
categories = ["command-line-utilities", "finance"]
readme = "README.md"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
